示範子路由設定與套版注意事項

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -288,7 +288,7 @@
               ></span
             ></a>
             <ul class="nav nav-second-level">
-              <li><a href="flot.html">Flot Charts</a></li>
+              <li><a href="flot.html" [routerLink]="['/charts/flot']" routerLinkActive="active" >Flot Charts</a></li>
               <li><a href="morris.html">Morris.js Charts</a></li>
             </ul>
             <!-- /.nav-second-level -->
