完成 Morris.js Charts 套版

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -289,7 +289,7 @@
             ></a>
             <ul class="nav nav-second-level">
               <li><a href="flot.html" [routerLink]="['/charts/flot']" routerLinkActive="active" >Flot Charts</a></li>
-              <li><a href="morris.html">Morris.js Charts</a></li>
+              <li><a href="morris.html" [routerLink]="['/charts/morris']" routerLinkActive="active" >Morris.js Charts</a></li>
             </ul>
             <!-- /.nav-second-level -->
           </li>
