--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-lg-12"><h1 class="page-header">Tables</h1></div>
+  <div class="col-lg-12"><h1 class="page-header">Tables: {{num}}</h1></div>
   <!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
