加入 FormsComponent 並示範基本表單的 ngModel 用法

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -297,7 +297,7 @@
             <a href="tables.html" [routerLink]="['/tables']" routerLinkActive="active"><i class="fa fa-table fa-fw"></i> Tables</a>
           </li>
           <li>
-            <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
+            <a href="forms.html" routerLink="/forms" routerLinkActive="active"><i class="fa fa-edit fa-fw"></i> Forms</a>
           </li>
           <li>
             <a href="#"
