--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -11,11 +11,23 @@
         <div class="row">
           <div class="col-lg-6">
             <form role="form">
-              <div class="form-group">
+              <div class="form-group" [class.has-error]="tName.invalid">
                 <label>Text Input</label>
-                <input class="form-control" name="name" required placeholder="請輸入姓名"
-                       [(ngModel)]="data.name" />
-                <p class="help-block">Example block-level help text here.</p>
+                <input class="form-control" name="name" placeholder="請輸入姓名"
+                       required minlength="2" maxlength="16"
+                       [(ngModel)]="data.name" #tName="ngModel" />
+                <pre>tName.value = {{ tName.value }}
+tName.valid = {{ tName.valid }}
+tName.invalid = {{ tName.invalid }}
+tName.touched = {{ tName.touched }}
+tName.untouched = {{ tName.untouched }}
+tName.dirty = {{ tName.dirty }}
+tName.pristine = {{ tName.pristine }}
+tName.enabled = {{ tName.enabled }}
+tName.disabled = {{ tName.disabled }}
+tName.errors = {{ tName.errors | json }}</pre>
+                <p class="help-block" *ngIf="tName.errors?.required">姓名為必填欄位</p>
+                <p class="help-block" *ngIf="tName.errors?.minlength">姓名欄位有長度限制，至少 {{ tName.errors.minlength.requiredLength }} 個字元以上，您輸入 {{ tName.errors.minlength.actualLength }} 個字元。</p>
               </div>
               <div class="form-group">
                 <label>Text Input with Placeholder</label>
