--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -26,8 +26,8 @@ tName.pristine = {{ tName.pristine }}
 tName.enabled = {{ tName.enabled }}
 tName.disabled = {{ tName.disabled }}
 tName.errors = {{ tName.errors | json }}</pre>
-                <p class="help-block" *ngIf="tName.errors?.required">姓名為必填欄位</p>
-                <p class="help-block" *ngIf="tName.errors?.minlength">姓名欄位有長度限制，至少 {{ tName.errors.minlength.requiredLength }} 個字元以上，您輸入 {{ tName.errors.minlength.actualLength }} 個字元。</p>
+                <p class="help-block" *ngIf="tName['errors']?.required">姓名為必填欄位</p>
+                <p class="help-block" *ngIf="tName['errors']?.minlength">姓名欄位有長度限制，至少 {{ tName['errors'].minlength.requiredLength }} 個字元以上，您輸入 {{ tName['errors'].minlength.actualLength }} 個字元。</p>
               </div>
               <div class="form-group">
                 <label>Text Input with Placeholder</label>
