--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -10,9 +10,9 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-lg-6">
-            <form role="form">
-              <div class="form-group" [class.has-error]="tName.invalid">
-                <label>Text Input</label>
+            <form role="form" (ngSubmit)="onSubmit(form)" #form="ngForm">
+              <div class="form-group" [class.has-error]="form.submitted && tName.invalid">
+                <label>姓名</label>
                 <input class="form-control" name="name" placeholder="請輸入姓名"
                        required minlength="2" maxlength="16"
                        [(ngModel)]="data.name" #tName="ngModel" />
@@ -29,10 +29,11 @@ tName.errors = {{ tName.errors | json }}</pre>
                 <p class="help-block" *ngIf="tName['errors']?.required">姓名為必填欄位</p>
                 <p class="help-block" *ngIf="tName['errors']?.minlength">姓名欄位有長度限制，至少 {{ tName['errors'].minlength.requiredLength }} 個字元以上，您輸入 {{ tName['errors'].minlength.actualLength }} 個字元。</p>
               </div>
-              <div class="form-group">
-                <label>Text Input with Placeholder</label>
+              <div class="form-group" [class.has-error]="form.submitted && tEmail.invalid">
+                <label>電子郵件</label>
                 <input class="form-control" name="email" required placeholder="請輸入電子郵件信箱"
-                       [(ngModel)]="data.email" />
+                       [(ngModel)]="data.email" #tEmail="ngModel" />
+                <p class="help-block" *ngIf="tEmail['errors']?.required">Email 為必填欄位</p>
               </div>
               <div class="form-group">
                 <label>Static Control</label>
