--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -11,6 +11,17 @@
         <div class="row">
           <div class="col-lg-6">
             <form role="form" (ngSubmit)="onSubmit(form)" #form="ngForm">
+                <pre>data = {{ data | json }}
+form.value = {{ form.value | json }}
+form.valid = {{ form.valid }}
+form.invalid = {{ form.invalid }}
+form.touched = {{ form.touched }}
+form.untouched = {{ form.untouched }}
+form.dirty = {{ form.dirty }}
+form.pristine = {{ form.pristine }}
+form.enabled = {{ form.enabled }}
+form.disabled = {{ form.disabled }}
+form.errors = {{ form.errors | json }}</pre>
               <div class="form-group" [class.has-error]="form.submitted && tName.invalid">
                 <label>姓名</label>
                 <input class="form-control" name="name" placeholder="請輸入姓名"
@@ -29,12 +40,18 @@ tName.errors = {{ tName.errors | json }}</pre>
                 <p class="help-block" *ngIf="tName['errors']?.required">姓名為必填欄位</p>
                 <p class="help-block" *ngIf="tName['errors']?.minlength">姓名欄位有長度限制，至少 {{ tName['errors'].minlength.requiredLength }} 個字元以上，您輸入 {{ tName['errors'].minlength.actualLength }} 個字元。</p>
               </div>
+
+<div ngModelGroup="group1" #group1="ngModelGroup">
+
               <div class="form-group" [class.has-error]="form.submitted && tEmail.invalid">
                 <label>電子郵件</label>
                 <input class="form-control" name="email" required placeholder="請輸入電子郵件信箱"
                        [(ngModel)]="data.email" #tEmail="ngModel" />
                 <p class="help-block" *ngIf="tEmail['errors']?.required">Email 為必填欄位</p>
               </div>
+
+</div>
+
               <div class="form-group">
                 <label>Static Control</label>
                 <p class="form-control-static">email@example.com</p>
