示範欄位連動式綁定

--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -22,7 +22,7 @@ form.pristine = {{ form.pristine }}
 form.enabled = {{ form.enabled }}
 form.disabled = {{ form.disabled }}
 form.errors = {{ form.errors | json }}</pre>
-              <div class="form-group" [class.has-error]="form.submitted && tName.invalid">
+              <div class="form-group" [class.has-error]="tName.dirty && tName.invalid">
                 <label>姓名</label>
                 <input class="form-control" name="name" placeholder="請輸入姓名"
                        required minlength="2" maxlength="16"
@@ -41,9 +41,9 @@ tName.errors = {{ tName.errors | json }}</pre>
                 <p class="help-block" *ngIf="tName['errors']?.minlength">姓名欄位有長度限制，至少 {{ tName['errors'].minlength.requiredLength }} 個字元以上，您輸入 {{ tName['errors'].minlength.actualLength }} 個字元。</p>
               </div>
 
-<div ngModelGroup="group1" #group1="ngModelGroup">
+<div ngModelGroup="group1" #group1="ngModelGroup" *ngIf="tName.valid">
 
-              <div class="form-group" [class.has-error]="form.submitted && tEmail.invalid">
+              <div class="form-group" [class.has-error]="tEmail.dirty && tEmail.invalid">
                 <label>電子郵件</label>
                 <input class="form-control" name="email" required placeholder="請輸入電子郵件信箱"
                        [(ngModel)]="data.email" #tEmail="ngModel" />
