建立基礎 Reactive Forms 表單

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -300,6 +300,9 @@
             <a href="forms.html" routerLink="/forms" routerLinkActive="active"><i class="fa fa-edit fa-fw"></i> Forms</a>
           </li>
           <li>
+            <a routerLink="/forms2" routerLinkActive="active"><i class="fa fa-edit fa-fw"></i> Reactive Forms</a>
+          </li>
+          <li>
             <a href="#"
               ><i class="fa fa-wrench fa-fw"></i> UI Elements<span
                 class="fa arrow"
