--- a/src/app/forms2/forms2.component.html
+++ b/src/app/forms2/forms2.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-lg-12"><h1 class="page-header">Forms</h1></div>
+  <div class="col-lg-12"><h1 class="page-header">Reactive Forms</h1></div>
   <!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
@@ -10,9 +10,8 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-lg-6">
-            <form role="form" (ngSubmit)="onSubmit(form)" #form="ngForm">
-                <pre>data = {{ data | json }}
-form.value = {{ form.value | json }}
+            <form role="form" [formGroup]="form">
+                <pre>form.value = {{ form.value | json }}
 form.valid = {{ form.valid }}
 form.invalid = {{ form.invalid }}
 form.touched = {{ form.touched }}
@@ -22,39 +21,15 @@ form.pristine = {{ form.pristine }}
 form.enabled = {{ form.enabled }}
 form.disabled = {{ form.disabled }}
 form.errors = {{ form.errors | json }}</pre>
-
-<button type="button" (click)="data.push({})">+</button>
-
-<div [ngModelGroup]="'group' + i" #group1="ngModelGroup" *ngFor="let item of data;let i=index">
-
-              <div class="form-group" [class.has-error]="tName.dirty && tName.invalid">
-                <label>姓名 {{i+1}}</label>
-                <input class="form-control" name="name" placeholder="請輸入姓名"
-                       required minlength="2" maxlength="16"
-                       [(ngModel)]="item.name" #tName="ngModel" />
-                <pre>tName.value = {{ tName.value }}
-tName.valid = {{ tName.valid }}
-tName.invalid = {{ tName.invalid }}
-tName.touched = {{ tName.touched }}
-tName.untouched = {{ tName.untouched }}
-tName.dirty = {{ tName.dirty }}
-tName.pristine = {{ tName.pristine }}
-tName.enabled = {{ tName.enabled }}
-tName.disabled = {{ tName.disabled }}
-tName.errors = {{ tName.errors | json }}</pre>
-                <p class="help-block" *ngIf="tName['errors']?.required">姓名為必填欄位</p>
-                <p class="help-block" *ngIf="tName['errors']?.minlength">姓名欄位有長度限制，至少 {{ tName['errors'].minlength.requiredLength }} 個字元以上，您輸入 {{ tName['errors'].minlength.actualLength }} 個字元。</p>
+              <div class="form-group">
+                <label>姓名</label>
+                <input class="form-control" formControlName="name" />
+                <p class="help-block">Example block-level help text here.</p>
               </div>
-
-              <div class="form-group" [class.has-error]="tEmail.dirty && tEmail.invalid">
-                <label>電子郵件 {{i+1}}</label>
-                <input class="form-control" name="email" required placeholder="請輸入電子郵件信箱"
-                       [(ngModel)]="data[i].email" #tEmail="ngModel" />
-                <p class="help-block" *ngIf="tEmail['errors']?.required">Email 為必填欄位</p>
+              <div class="form-group">
+                <label>電子郵件</label>
+                <input class="form-control" formControlName="email" />
               </div>
-
-</div>
-
               <div class="form-group">
                 <label>Static Control</label>
                 <p class="form-control-static">email@example.com</p>
