--- a/src/app/forms2/forms2.component.html
+++ b/src/app/forms2/forms2.component.html
@@ -21,33 +21,27 @@ form.pristine = {{ form.pristine }}
 form.enabled = {{ form.enabled }}
 form.disabled = {{ form.disabled }}
 form.errors = {{ form.errors | json }}</pre>
-              <div class="form-group" [class.has-error]="form.get('name').dirty && form.get('name').invalid">
-                <label>姓名 <button type="button" (click)="ToggleEnable('name')">Disable/Enable</button></label>
+
+<button type="button" (click)="AddNewContact()">新增聯絡人</button>
+
+<div formArrayName="contacts">
+
+  <div *ngFor="let item of form.get('contacts')['controls']; let i=index" [formGroupName]="i">
+              <div class="form-group" [class.has-error]="item.controls['name'].dirty && item.controls['name'].invalid">
+                <label>姓名 {{i+1}} <button type="button" (click)="ToggleEnable('name')">Disable/Enable</button></label>
                 <input class="form-control" formControlName="name" />
-                <pre>form.get('name').value = {{ form.get('name').value }}
-form.get('name').valid = {{ form.get('name').valid }}
-form.get('name').invalid = {{ form.get('name').invalid }}
-form.get('name').touched = {{ form.get('name').touched }}
-form.get('name').untouched = {{ form.get('name').untouched }}
-form.get('name').dirty = {{ form.get('name').dirty }}
-form.get('name').pristine = {{ form.get('name').pristine }}
-form.get('name').enabled = {{ form.get('name').enabled }}
-form.get('name').disabled = {{ form.get('name').disabled }}
-form.get('name').errors = {{ form.get('name').errors | json }}</pre>
-                <p class="help-block" *ngIf="form.get('name')['errors']?.required">姓名為必填欄位</p>
-                <p class="help-block" *ngIf="form.get('name')['errors']?.minlength">姓名欄位有長度限制，至少 {{ form.get('name')['errors'].minlength.requiredLength }} 個字元以上，您輸入 {{ form.get('name')['errors'].minlength.actualLength }} 個字元。</p>
+                <p class="help-block" *ngIf="item.controls['name']['errors']?.required">姓名為必填欄位</p>
+                <p class="help-block" *ngIf="item.controls['name']['errors']?.minlength">姓名欄位有長度限制，至少 {{ item.controls['name']['errors'].minlength.requiredLength }} 個字元以上，您輸入 {{ item.controls['name']['errors'].minlength.actualLength }} 個字元。</p>
               </div>
 
-<div formGroupName="group1">
-
-              <div class="form-group" [class.has-error]="form.get('group1.email').dirty && form.get('group1.email').invalid">
-                <label>電子郵件</label>
+              <div class="form-group" [class.has-error]="item.controls['email'].dirty && item.controls['email'].invalid">
+                <label>電子郵件 {{i+1}}</label>
                 <input class="form-control" formControlName="email" />
-                <p class="help-block" *ngIf="form.get('group1.email')['errors']?.required">Email 為必填欄位</p>
+                <p class="help-block" *ngIf="item.controls['email']['errors']?.required">Email 為必填欄位</p>
               </div>
+  </div>
 
 </div>
-
               <div class="form-group">
                 <label>Static Control</label>
                 <p class="form-control-static">email@example.com</p>
