身份證字號檢查範例 (檢查身份證字號的程式碼不要抄，請另外找檢查程式邏輯)

--- a/src/app/forms2/forms2.component.html
+++ b/src/app/forms2/forms2.component.html
@@ -33,6 +33,8 @@ form.errors = {{ form.errors | json }}</pre>
                 <p class="help-block" *ngIf="item.get('name')['errors']?.required">姓名為必填欄位</p>
                 <p class="help-block" *ngIf="item.get('name')['errors']?.nameValidator">姓名必須有 will 字樣</p>
                 <p class="help-block" *ngIf="item.get('name')['errors']?.minlength">姓名欄位有長度限制，至少 {{ item.get('name')['errors'].minlength.requiredLength }} 個字元以上，您輸入 {{ item.get('name')['errors'].minlength.actualLength }} 個字元。</p>
+
+                <pre>item.get('name')['errors'] = {{ item.get('name')['errors'] | json }}</pre>
               </div>
 
               <div class="form-group" [class.has-error]="item.get('email').dirty &&item.get('email').invalid">
